wip 11: postgres removal